# ShiftStitch

./: .clang-format  .gitignore  CMakeLists.txt  README.md
cmake/: FetchOpenCV.cmake
examples/: basic_example.cpp
include/shiftstitch/: istitcher.hpp  result.hpp  shiftstitch.hpp  sift.hpp
scripts/: build_android.py  build_linux.py  build_windows.py  common.py
src/: result.cpp  shiftstitch.cpp  sift.cpp
tests/: CMakeLists.txt  test_main.cpp
